--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -6,5 +6,15 @@
             <h1>BY THE WAY</h1>
             <p><i>Planning the ultimate road trip for the ultimate explorer</i></p>
         </div>
+        <div class="search_container">
+            <h2>Start planning your trip:</h2>
+            <table>
+                <tr>
+                    <th><input id="start_search" type="text" placeholder="Start Destination"></th>
+                    <th><input id="end_search"type="text" placeholder="End Destination"></th>
+                </tr>
+            </table>
+            <button id="go_button" type="button">GO!</button>
+        </div>
     </div>
 {% endblock content %}
