--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -11,6 +11,7 @@
 
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'base/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base/survey.css' %}">
 
     {% if title %}
         <title>ByTheWay - {{ title }}</title>
